# uiua-boo

./: .env.example  .gitignore  README.md  adonisrc.ts  package-lock.json  package.json  todo.md  tsconfig.json
app/abilities/: main.ts
app/controllers/: auth_controller.ts  browse_controller.ts  package_controller.ts  publish_controller.ts
app/exceptions/: handler.ts
app/jobs/: PackagePublishJob.ts
app/middleware/: auth_middleware.ts  force_json_response_middleware.ts  initialize_bouncer_middleware.ts
app/models/: package.ts  scope.ts  user.ts
app/policies/: main.ts  package_policy.ts  scope_policy.ts
app/services/: package_service.ts  scope_service.ts  user_service.ts
app/utils/: auth.ts  cli.ts  files.ts  uiua.ts  url.ts  validation.ts
app/validators/: package.ts  scope.ts
cli/: Cargo.toml
cli/src/: api.rs  common.rs  main.rs
cli/src/commands/: init.rs  publish.rs  validate.rs
cli/test-package/: .gitignore  README.md  lib.ua  main.ua
cli/test-package/src/: greet.ua
commands/: expire_apps.ts  expire_pending_apps.ts
config/: auth.ts  database.ts  drive.ts  shield.ts
database/migrations/: 1745696903792_create_users_table.ts  1745784518605_create_scopes_table.ts  1746381401407_create_packages_table.ts  1747423202258_create_pending_app_approvals_table.ts  1747423202258_create_pending_app_table.ts  1747592306630_create_apps_table.ts  1747675806697_create_auth_access_tokens_table.ts  1748676147519_create_publish_jobs_table.ts  (+2 more)
resources/css/: app.css
start/: cron.ts  env.ts  kernel.ts  routes.ts  scheduler.ts  view.ts
tests/: bootstrap.ts
(+60 files in other folders)
