[package]
name = "uiua-boo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
glob = "0.3.2"
owo-colors = "4.2.0"
regex = "1.11.1"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
flate2 = "1.1.1"
tar = "0.4.44"
bytesize = "2.0.1"
virtual-filesystem = "0.2.1"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2.1.3"
log = "0.4"
env_logger = "0.11"